REGRESSION(r185816): In the Hong Kong locale, navigator.language reports it's in the Taiwan locale https://bugs.webkit.org/show_bug.cgi?id=200043

Unreviewed.

Addressing additional review comments.

Source/WTF:

* wtf/cocoa/LanguageCocoa.mm:
(WTF::canMinimizeLanguages):

LayoutTests:

* fast/text/international/system-language/navigator-language/navigator-language-en-GB.html:
* fast/text/international/system-language/navigator-language/navigator-language-en-US.html:
* fast/text/international/system-language/navigator-language/navigator-language-en.html:
* fast/text/international/system-language/navigator-language/navigator-language-es-419.html:
* fast/text/international/system-language/navigator-language/navigator-language-es-ES.html:
* fast/text/international/system-language/navigator-language/navigator-language-es-MX.html:
* fast/text/international/system-language/navigator-language/navigator-language-es.html:
* fast/text/international/system-language/navigator-language/navigator-language-fr-CA.html:
* fast/text/international/system-language/navigator-language/navigator-language-fr.html:
* fast/text/international/system-language/navigator-language/navigator-language-hi.html:
* fast/text/international/system-language/navigator-language/navigator-language-ja.html:
* fast/text/international/system-language/navigator-language/navigator-language-pt-BR.html:
* fast/text/international/system-language/navigator-language/navigator-language-pt-PT.html:
* fast/text/international/system-language/navigator-language/navigator-language-ru.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-HK.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hans.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hant-HK.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hant.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-TW.html:

Canonical link: https://commits.webkit.org/219245@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254412 268f45cc-cd09-0410-ab3c-d52691b4dbfc